map images position fixed, speed increased, vote results background changed

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <img src="images/map-0.jpg" alt="kamera sűrűség térkép" class="base">
       </li>
       <li>
-        <img src="images/map-1.jpg" alt="kamera sűrűség térkép" class="item">
+        <img src="images/map-1.jpg" alt="kamera sűrűség térkép" class="item active">
       </li>
       <li>
         <img src="images/map-2.jpg" alt="kamera sűrűség térkép" class="item">
