highlight effect added to title

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bekamerázott Budapest</h1>
+    <div class="title">
+      <img class="base" src="images/title.jpg" alt="Bekamerázott Budapest">
+      <img class="highlighted" src="images/title_highlighted.jpg" alt="Bekamerázott Budapest">
+    </div>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, ratione! Sapiente deleniti quos nihil corporis ea, perspiciatis praesentium assumenda impedit dolorem ab fuga soluta eveniet hic repellendus excepturi. Saepe laborum at ex aut, sed, pariatur amet perspiciatis alias neque fuga eligendi iste ab maxime natus. Dolorum enim nulla amet ipsam.
       <br>
@@ -234,6 +237,7 @@
   </footer>
   <script src="javascripts/share.js"></script>
   <script src="javascripts/vote.js"></script>
+  <script src="javascripts/highlight.js"></script>
   <script src="javascripts/script.js"></script>
 </body>
 </html>
