title images changed to text

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <body>
   <div class="container">
     <div class="title">
-      <img class="base" src="images/title.jpg" alt="Bekamerázott Budapest">
-      <img class="highlighted" src="images/title_highlighted.jpg" alt="Bekamerázott Budapest">
+      <h1 class="base">Bekamerázott Budapest</h1>
+      <h1 class="highlighted">Bekamerázott Budapest</h1>
     </div>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, ratione! Sapiente deleniti quos nihil corporis ea, perspiciatis praesentium assumenda impedit dolorem ab fuga soluta eveniet hic repellendus excepturi. Saepe laborum at ex aut, sed, pariatur amet perspiciatis alias neque fuga eligendi iste ab maxime natus. Dolorum enim nulla amet ipsam.
