map scrolling fixed, vote result color logic changed

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
   </div>
   <div class="container">
-    <h2>Mit gondolsz?</h2>
+    <h2>Mi a véleménye? A kamerák a biztonságát vagy a megfigyelését szolgálják?</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptatem velit libero odit, officiis dolorem iusto, asperiores fugit fuga sint commodi! Qui iusto eaque corporis laboriosam nisi, perferendis minus molestias, quisquam distinctio maxime, sunt cumque ab quae. Accusantium tenetur veniam minus eligendi quisquam saepe, voluptatem consectetur sunt, praesentium laborum ex.</p>
     <div class="vote">
       <ul class="vote-list radios active">
@@ -209,6 +209,10 @@
           <div>10</div>
         </li>
       </ul>
+      <div class="vote-description">
+        <p>1- inkább a biztonságát</p>
+        <p>10 - inkább a megfigyelését</p>
+      </div>
     </div>
     <h2>Lorem ipsum dolorem</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam eligendi, nostrum explicabo voluptate soluta animi. Tempora, hic illo. Quo repudiandae aspernatur qui natus assumenda inventore? Labore illum veritatis voluptatum doloribus expedita natus exercitationem quasi explicabo laborum aliquid vitae, nesciunt fuga aperiam porro ipsam, alias, quia iusto consequatur enim autem corporis?</p>
