footer content added, new video added

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <h2>Lorem ipsum dolorem</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam eligendi, nostrum explicabo voluptate soluta animi. Tempora, hic illo. Quo repudiandae aspernatur qui natus assumenda inventore? Labore illum veritatis voluptatum doloribus expedita natus exercitationem quasi explicabo laborum aliquid vitae, nesciunt fuga aperiam porro ipsam, alias, quia iusto consequatur enim autem corporis?</p>
     <div class="video">
-      <iframe width="1000" height="560" src="https://www.youtube.com/embed/izGwDsrQ1eQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe src="https://player.vimeo.com/video/317272917" width="1100" height="620" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <hr>
     <div class="social-buttons">
@@ -234,9 +234,28 @@
   </div>
   <footer>
     <div class="container">
-      <a href="https://atlo.team">
+      <a class="footer-logo" href="https://atlo.team">
         <img src="images/logo.svg" alt="Átló logó">
       </a>
+
+      <p><strong>Készítették:</strong></p>
+      <ul>
+        <li>
+          Szöveg, adat, térkép: Bátorfy Attila
+        </li>
+        <li>
+          Grafika: Mikola Bence
+        </li>
+        <li>
+          Fejlesztés: Horváth László
+        </li>
+        <li>
+          Videó: Tremmel Márk, Lődi Áron, Kiszler Dániel
+        </li>
+        <li>
+          Közreműködő: Sepsi Tibor
+        </li>
+      </ul>
     </div>
   </footer>
   <script src="javascripts/share.js"></script>
