vote is using the new api

--- a/index.html
+++ b/index.html
@@ -137,43 +137,43 @@
     <div class="vote">
       <ul class="vote-list radios active">
         <li>
-          <input type="radio" name="vote" value="1" id="vote-1">
+          <input type="radio" name="vote" value="" id="vote-1">
           <label for="vote-1">1</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="2" id="vote-2">
+          <input type="radio" name="vote" value="" id="vote-2">
           <label for="vote-2">2</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="3" id="vote-3">
+          <input type="radio" name="vote" value="" id="vote-3">
           <label for="vote-3">3</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="4" id="vote-4">
+          <input type="radio" name="vote" value="" id="vote-4">
           <label for="vote-4">4</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="5" id="vote-5">
+          <input type="radio" name="vote" value="" id="vote-5">
           <label for="vote-5">5</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="6" id="vote-6">
+          <input type="radio" name="vote" value="" id="vote-6">
           <label for="vote-6">6</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="7" id="vote-7">
+          <input type="radio" name="vote" value="" id="vote-7">
           <label for="vote-7">7</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="8" id="vote-8">
+          <input type="radio" name="vote" value="" id="vote-8">
           <label for="vote-8">8</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="9" id="vote-9">
+          <input type="radio" name="vote" value="" id="vote-9">
           <label for="vote-9">9</label>
         </li>
         <li>
-          <input type="radio" name="vote" value="10" id="vote-10">
+          <input type="radio" name="vote" value="" id="vote-10">
           <label for="vote-10">10</label>
         </li>
       </ul>
