first camera state is checked

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </li>
       <li>
         <h3>dome kamera</h3>
-        <p>A kupola formájú házáról elnevezett kamerát elsősorban mennyezetre szerelik. Gyárilag rendelkezik objektívvel, de rengeteg változatban elérhető, így a célnak megfelelő látószögű optikával vásárolható meg. Az objektívjét a megfigyelt területre állítva rögzítik, pásztázásra nem alkalmas. Előnye, hogy a kamerát borító bura leplezi az objektívet, így nem látható, hogy pontosan melyik területet figyelik meg vele.</p>
+        <p>A kupola formájú házáról elnevezett kamerát elsősorban mennyezetre szerelik. Gyárilag rendelkezik objektívvel, de rengeteg változatban elérhető, így a célnak megfelelő látószögű optikával vásárolható meg. Az objektívjét a megfigyelt területre állítva rögzítik, pásztázásra nem alkalmas.</p>
         <img src="images/dome_kamera.svg" alt="box kamera">
         <input type="radio" name="camera-state" value="camera-2" id="camera-2">
         <label for="camera-2"></label>
