--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <p>A legrégebb óta használt, ezért legelterjedtebb típus. Nevét az alakjáról kapta. Moduláris felépítésű, gyárilag nem rendelkezik optikával. A megfigyelt területhez alkalmazkodva bármilyen látószögű objektívval szerelhető. Jellemzően beltéren használják.</p>
         <img src="images/box_kamera.svg" alt="box kamera">
         <input type="radio" name="camera-state" value="camera-1" id="camera-1">
-        <label for="camera-1"></label>
+        <label for="camera-1">mit lát a kamera?</label>
       </li>
       <li>
         <h3>dome kamera</h3>
