granting wishes like the genie but i am not will smith

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
       <h1 class="highlighted">Bekamerázott Budapest</h1>
     </div>
     <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam, ratione! Sapiente deleniti quos nihil corporis ea, perspiciatis praesentium assumenda impedit dolorem ab fuga soluta eveniet hic repellendus excepturi. Saepe laborum at ex aut, sed, pariatur amet perspiciatis alias neque fuga eligendi iste ab maxime natus. Dolorum enim nulla amet ipsam.
-      <br>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga quas non tenetur, nostrum optio veritatis. Rem deserunt ea laudantium! Labore inventore accusamus odit dolor laudantium consequatur, iure facere nostrum minus eligendi repellendus ea quisquam similique fugiat doloremque incidunt esse quibusdam doloribus magnam dicta mollitia ipsum natus! Veniam placeat tempora voluptatibus.
+      A térfigyelő kamerák jelenléte sokak számára a biztonságot jelenti, másoknak pedig az állam mindenhová elkísérő szemeit. A kormány új törvénye miatt az eddig külön kezelésű kamerákat egyetlen rendszerbe kötik be, a felvételek tárolási és felhasználási feltételeit pedig kiterjesztik. Ebben az anyagunkban azt nézzük meg, hogy ezek a kamerák mit láthatnak egyáltalán, hol vannak Budapesten és, hogy az új szabályozás adhat-e okot az aggodalomra, vagy tényleg pusztán a még biztonságosabb élet megteremtése a cél. 
+    </p>
+    <p>
+      2018. október 19-én Pintér Sándor belügyminiszter egy salátatörvényt nyújtott be a magyar országgyűlésnek, amelyben módosította a térfigyelőkamerák által rögzített felvételek összekötésének és tárolásának feltételeit. Az Átlátszó jogásza, Sepsi Tibor akkor azt írta, hogy a törvény jelentősen megemeli a rendőrségi és a közterületfelügyeleti kamerák tárolási idejét, a bankbiztonsági kamerák felvételeinek integrálásával magánmegfigyelést kever közcélúval, emellett ad a közútkezelőknek egy biankó felhatalmazást kamerák telepítésére. Ez az elképzelés pedig ellentétes az Alaptörvénnyel és az uniós adatkezelésről szóló új szabályozással, a GDPR-ral is.
+    </p>
+    <p>
+      Az eddigi szabályozás a különféle megfigyelőrendszereket elkülönítette, a felvételek tárolási idejét pedig szintén külön határozta meg. A kormány azonban a törvénnyel egy rendszerbe kötné be a rendőrség, a közterületfelügyelet, az önkormányzatok, az údjífizetési cégek, a bankok, a közútkezelők és a közlekedési vállalatok, valamint  a parkolótársaságok által üzemeltetett kamerákat is. Az általuk rögzített felvételeket egy központi szerveren tárolnák egységesen 30 napig az indoklás szerint azért, hogy biztosítsák "a hatékony bűnüldözési, bűnmegelőzési, nemzetbiztonsági és terrorelhárítási, valamint közlekedésszervezési célok elérését”. A közcélt, közérdeket szolgáló kamerák száma országszerte 25-30 ezer, a bankok, pénzintézetek kameráinak száma pedig 10 ezres lehet. 
     </p>
     <ul class="inline camera-list">
       <li>
@@ -85,7 +89,7 @@
   </ul>
   <div class="container">
     <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima perspiciatis amet molestiae perferendis veniam ut quod consectetur ea dolores, autem incidunt nisi numquam nobis itaque, non dolorem ipsum eos optio dignissimos eaque eum iure repudiandae odit? Harum necessitatibus fugit autem porro quia tenetur assumenda? Maiores, voluptates aut! Incidunt sit non dicta excepturi omnis commodi quos debitis iure consequatur alias ullam ex fugit veritatis velit, architecto dignissimos ipsa aliquam cupiditate inventore quod id reiciendis? Sunt nesciunt cupiditate earum quasi, ducimus dolores rem dolore? Earum iusto nobis recusandae dolore beatae. Rerum sunt voluptatum corporis assumenda. Odio, dolores ullam. Quam, a! Sed, quaerat.
+      Budapesten nehéz megbecsülni a térfigyelőkamerák számát. A nyilvánosan elérhető, továbbá az általunk az önkormányzatoktól kikért adatok szerint a rendőrség, a Fővárosi Közterület-felügyelet és az önkormányatok közterületfelügyeletei által üzemeltetett kamerák száma közel 2500, de sajnos nem minden önkormányzat válaszolt a közérdekű adatigénylésünkre. Az alábbi térképen végiggörgetheti a kamerák elhelyezkedését a fenntartó szerint. 
     </p>
   </div>
   <div class="map">
@@ -110,30 +114,58 @@
       </li>
       <img src="" alt="" class="active">
     </ul>
-    <div class="map-description">
-      <h3>Lorem ipsum dolor sit.</h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae dolore repudiandae pariatur est tempora libero deserunt quae maxime aperiam laudantium aliquam quis inventore eius delectus quidem dicta fugit temporibus sequi iusto velit, at labore dolores. Maiores, commodi. Sit omnis commodi fugit earum provident, sunt eaque suscipit tenetur animi deserunt a!</p>
-      <div class="signs">
-        <ul class="inline">
-          <li>
-            <span></span> Önkormányzat
-          </li>
-          <li>
-            <span></span> BRFK
-          </li>
-          <li>
-            <span></span> Közterületfelügyelet
-          </li>
-        </ul>
+    <ul class="map-description">
+      <li class="active">
+        <h3>Kamerák sűrűségtérképe</h3>
         <p class="call-to-action">
           <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
         </p>
-      </div>
-    </div>
+      </li>
+      <li>
+        <h3>Önkormányzat</h3>
+        <p class="call-to-action">
+          <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
+        </p>
+      </li>
+      <li>
+        <h3>BRFK</h3>
+        <p class="call-to-action">
+          <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
+        </p>
+      </li>
+      <li>
+        <h3>Közterület-felügyelet</h3>
+        <p class="call-to-action">
+          <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
+        </p>
+      </li>
+      <li>
+        <div class="signs">
+          <ul class="inline">
+            <li>
+              <span></span> Önkormányzat
+            </li>
+            <li>
+              <span></span> BRFK
+            </li>
+            <li>
+              <span></span> Közterületfelügyelet
+            </li>
+          </ul>
+          <p class="call-to-action">
+            <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
+          </p>
+        </div>
+      </li>
+    </ul>
   </div>
   <div class="container">
+    <p>Az alábbi videóban az Auróra utcából elindulva a Pollack Mihály térig Sepsi Tibor jogásszal a szabályozás hátteréről beszélgetünk. </p>
+    <div class="video">
+      <iframe src="https://player.vimeo.com/video/317272917" width="1100" height="620" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+    </div>
     <h2>Mi a véleménye? A kamerák a biztonságát vagy a megfigyelését szolgálják?</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos voluptatem velit libero odit, officiis dolorem iusto, asperiores fugit fuga sint commodi! Qui iusto eaque corporis laboriosam nisi, perferendis minus molestias, quisquam distinctio maxime, sunt cumque ab quae. Accusantium tenetur veniam minus eligendi quisquam saepe, voluptatem consectetur sunt, praesentium laborum ex.</p>
+    <p>Az alábbi szavazófelületen megmondhatja, hogy ön szerint e térfigyelőkamerák jelenléte a biztonságunkat szolgálja, vagy inkább az állam kontrolljának, megfigyelésének egy eszköze.</p>
     <div class="vote">
       <ul class="vote-list radios active">
         <li>
@@ -210,14 +242,9 @@
         </li>
       </ul>
       <div class="vote-description">
-        <p>1 - inkább a biztonságát</p>
-        <p>10 - inkább a megfigyelését</p>
+        <p>1 - inkább a biztonságé</p>
+        <p>10 - inkább a megfigyelésé</p>
       </div>
-    </div>
-    <h2>Lorem ipsum dolorem</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam eligendi, nostrum explicabo voluptate soluta animi. Tempora, hic illo. Quo repudiandae aspernatur qui natus assumenda inventore? Labore illum veritatis voluptatum doloribus expedita natus exercitationem quasi explicabo laborum aliquid vitae, nesciunt fuga aperiam porro ipsam, alias, quia iusto consequatur enim autem corporis?</p>
-    <div class="video">
-      <iframe src="https://player.vimeo.com/video/317272917" width="1100" height="620" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <hr>
     <div class="social-buttons">
