share images added, description changed, text style changes

--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
   <title>Bekamerázott Budapest</title>
   <!-- OPENGRAPH SHARE -->
   <meta property="og:type" content="article">
-  <meta property="og:url" content="https://atlo.team/bekamerazott_budapest">
+  <meta property="og:url" content="https://atlo.team/bekamerazott-budapest">
   <meta property="og:title" content="Bekamerázott Budapest">
   <meta property="og:locale" content="hu_HU">
-  <meta property="og:image" content="https://atlo.team/bekamerazott_budapest/images/share/cover_facebook.jpg">
+  <meta property="og:image" content="https://atlo.team/bekamerazott-budapest/images/share/facebook.jpg">
   <meta property="article:publisher" content="https://www.facebook.com/atloteam/">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@AtloTeam">
-  <meta name="twitter:image" content="https://atlo.team/bekamerazott_budapest/images/share/cover_twitter.jpg">
+  <meta name="twitter:image" content="https://atlo.team/bekamerazott-budapest/images/share/twitter.jpg">
   <meta property="fb:app_id" content="345585816190715">
-  <meta property="og:description" content="Nyolc egyszerű kérdés, nyolc egyszerű parlamenti patkó a magyar képviselők demográfiai összetételéről, fizetési kategóriáikról és végzettségükről. Hamarosan pedig egy ennél sokkal összetettebb, kereshető adatvizualizációval jelentkezünk arról, hogy kik is képviselnek bennünket a parlamentben.">
-  <meta name="description" content="Nyolc egyszerű kérdés, nyolc egyszerű parlamenti patkó a magyar képviselők demográfiai összetételéről, fizetési kategóriáikról és végzettségükről. Hamarosan pedig egy ennél sokkal összetettebb, kereshető adatvizualizációval jelentkezünk arról, hogy kik is képviselnek bennünket a parlamentben.">
+  <meta property="og:description" content="A térfigyelő kamerák jelenléte sokak számára a biztonságot jelenti, másoknak pedig az állam mindenhová elkísérő szemeit.">
+  <meta name="description" content="A térfigyelő kamerák jelenléte sokak számára a biztonságot jelenti, másoknak pedig az állam mindenhová elkísérő szemeit.">
   <link rel="icon" type="image/png" href="https://atlo.team/images/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
@@ -29,7 +29,7 @@
       <h1 class="highlighted">Bekamerázott Budapest</h1>
     </div>
     <p>
-      A térfigyelő kamerák jelenléte sokak számára a biztonságot jelenti, másoknak pedig az állam mindenhová elkísérő szemeit. A kormány új törvénye miatt az eddig külön kezelésű kamerákat egyetlen rendszerbe kötik be, a felvételek tárolási és felhasználási feltételeit pedig kiterjesztik. Ebben az anyagunkban azt nézzük meg, hogy ezek a kamerák mit láthatnak egyáltalán, hol vannak Budapesten és, hogy az új szabályozás adhat-e okot az aggodalomra, vagy tényleg pusztán a még biztonságosabb élet megteremtése a cél. 
+      <strong>A térfigyelő kamerák jelenléte sokak számára a biztonságot jelenti, másoknak pedig az állam mindenhová elkísérő szemeit. A kormány új törvénye miatt az eddig külön kezelésű kamerákat egyetlen rendszerbe kötik be, a felvételek tárolási és felhasználási feltételeit pedig kiterjesztik. Ebben az anyagunkban azt nézzük meg, hogy ezek a kamerák mit láthatnak egyáltalán, hol vannak Budapesten és, hogy az új szabályozás adhat-e okot az aggodalomra, vagy tényleg pusztán a még biztonságosabb élet megteremtése a cél.</strong>
     </p>
     <p>
       2018. október 19-én Pintér Sándor belügyminiszter egy salátatörvényt nyújtott be a magyar országgyűlésnek, amelyben módosította a térfigyelőkamerák által rögzített felvételek összekötésének és tárolásának feltételeit. Az Átlátszó jogásza, Sepsi Tibor akkor azt írta, hogy a törvény jelentősen megemeli a rendőrségi és a közterületfelügyeleti kamerák tárolási idejét, a bankbiztonsági kamerák felvételeinek integrálásával magánmegfigyelést kever közcélúval, emellett ad a közútkezelőknek egy biankó felhatalmazást kamerák telepítésére. Ez az elképzelés pedig ellentétes az Alaptörvénnyel és az uniós adatkezelésről szóló új szabályozással, a GDPR-ral is.
