--- a/index.html
+++ b/index.html
@@ -270,23 +270,25 @@
       <a class="footer-logo" href="https://atlo.team">
         <img src="images/logo.svg" alt="Átló logó">
       </a>
-
       <p><strong>Készítették:</strong></p>
       <ul>
         <li>
-          Szöveg, adat, térkép: Bátorfy Attila
+          Szöveg: Bátorfy Attila, Mikola Bence
         </li>
         <li>
-          Grafika, szöveg: Mikola Bence
+          Adat: Bátorfy Attila, Erdélyi Katalin
         </li>
         <li>
-          Szöveg: Erdélyi Katalin
+          Vizualizáció: Bátorfy Attila, Mikola Bence
         </li>
         <li>
-          Videó: Tremmel Márk, Lődi Áron, Kiszler Dániel
+          Grafika: Mikola Bence
         </li>
         <li>
           Fejlesztés: Horváth László
+        </li>
+        <li>
+          Videó: Tremmel Márk, Lődi Áron, Kiszler Dániel
         </li>
         <li>
           Közreműködő: Sepsi Tibor
