left and right navigation buttons added

--- a/index.html
+++ b/index.html
@@ -118,27 +118,67 @@
     <ul class="map-description">
       <li class="active">
         <h3>Kamerák sűrűségtérképe</h3>
-        <p class="call-to-action">
-          <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
-        </p>
+        <div class="call-to-action">
+          <p>Lapozz,</p>
+          <div>
+            <button class="previous-map" type="button">
+              <img src="images/left.svg" alt="előző térkép gomb">
+            </button>
+            <button class="next-map" type="button">
+              <img src="images/right.svg" alt="következő térkép gomb">
+            </button>
+          </div>
+          <p>vagy görgess tovább!</p>
+          <img src="images/wheel.svg">
+        </div>
       </li>
       <li>
         <h3>Önkormányzat</h3>
-        <p class="call-to-action">
-          <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
-        </p>
+        <div class="call-to-action">
+          <p>Lapozz,</p>
+          <div>
+            <button class="previous-map" type="button">
+              <img src="images/left.svg" alt="előző térkép gomb">
+            </button>
+            <button class="next-map" type="button">
+              <img src="images/right.svg" alt="következő térkép gomb">
+            </button>
+          </div>
+          <p>vagy görgess tovább!</p>
+          <img src="images/wheel.svg">
+        </div>
       </li>
       <li>
         <h3>BRFK</h3>
-        <p class="call-to-action">
-          <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
-        </p>
+        <div class="call-to-action">
+          <p>Lapozz,</p>
+          <div>
+            <button class="previous-map" type="button">
+              <img src="images/left.svg" alt="előző térkép gomb">
+            </button>
+            <button class="next-map" type="button">
+              <img src="images/right.svg" alt="következő térkép gomb">
+            </button>
+          </div>
+          <p>vagy görgess tovább!</p>
+          <img src="images/wheel.svg">
+        </div>
       </li>
       <li>
         <h3>Közterület-felügyelet</h3>
-        <p class="call-to-action">
-          <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
-        </p>
+        <div class="call-to-action">
+          <p>Lapozz,</p>
+          <div>
+            <button class="previous-map" type="button">
+              <img src="images/left.svg" alt="előző térkép gomb">
+            </button>
+            <button class="next-map" type="button">
+              <img src="images/right.svg" alt="következő térkép gomb">
+            </button>
+          </div>
+          <p>vagy görgess tovább!</p>
+          <img src="images/wheel.svg">
+        </div>
       </li>
       <li>
         <div class="signs">
@@ -153,9 +193,19 @@
               <span></span> Közterületfelügyelet
             </li>
           </ul>
-          <p class="call-to-action">
-            <img src="images/gorgess_tovabb_gomb.svg"> Görgess tovább
-          </p>
+          <div class="call-to-action">
+            <p>Lapozz,</p>
+            <div>
+              <button class="previous-map" type="button">
+                <img src="images/left.svg" alt="előző térkép gomb">
+              </button>
+              <button class="next-map" type="button">
+                <img src="images/right.svg" alt="következő térkép gomb">
+              </button>
+            </div>
+            <p>vagy görgess tovább!</p>
+            <img src="images/wheel.svg">
+          </div>
         </div>
       </li>
     </ul>
