cookie consent script added

--- a/index.html
+++ b/index.html
@@ -379,5 +379,6 @@
   <script src="javascripts/vote.js"></script>
   <script src="javascripts/highlight.js"></script>
   <script src="javascripts/script.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="http://chs03.cookie-script.com/s/026c51c9377bdd640eada2a7b46f466d.js"></script>
 </body>
 </html>
