--- a/index.html
+++ b/index.html
@@ -379,6 +379,27 @@
   <script src="javascripts/vote.js"></script>
   <script src="javascripts/highlight.js"></script>
   <script src="javascripts/script.js"></script>
-  <script type="text/javascript" charset="UTF-8" src="http://chs03.cookie-script.com/s/026c51c9377bdd640eada2a7b46f466d.js"></script>
+  <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
+<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.js"></script>
+<script>
+window.addEventListener("load", function(){
+window.cookieconsent.initialise({
+  "palette": {
+    "popup": {
+      "background": "#edeff5",
+      "text": "#838391"
+    },
+    "button": {
+      "background": "#4b81e8"
+    }
+  },
+  "content": {
+    "message": "Az oldal sütiket (cookie) használ. Tudj meg többet az adatvédelmi irányelveinkről az a",
+    "dismiss": "Elfogadom",
+    "link": "tudj meg többet.",
+    "href": "https://atlo.team/jogi-nyilatkozat"
+  }
+})});
+</script>
 </body>
 </html>
