cookie consent popup text fixed

--- a/index.html
+++ b/index.html
@@ -394,9 +394,9 @@ window.cookieconsent.initialise({
     }
   },
   "content": {
-    "message": "Az oldal sütiket (cookie) használ. Tudj meg többet az adatvédelmi irányelveinkről az a",
+    "message": "Az oldal sütiket (cookie) használ. Tudj meg többet az adatvédelmi irányelveinkről az ",
     "dismiss": "Elfogadom",
-    "link": "tudj meg többet.",
+    "link": "alábbi linken.",
     "href": "https://atlo.team/jogi-nyilatkozat"
   }
 })});
