vote description changed

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       <iframe src="https://player.vimeo.com/video/317272917" width="1100" height="620" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     </div>
     <h2>Mi a véleménye? A kamerák a biztonságát vagy a megfigyelését szolgálják?</h2>
-    <p>Szavazzon, hogy ön szerint e térfigyelőkamerák jelenléte a biztonságunkat szolgálja, vagy inkább az állam kontrolljának, megfigyelésének egy eszköze.</p>
+    <p>Szavazzon az alábbi 1–10-ig terjedő skálán, hogy ön szerint e térfigyelőkamerák jelenléte a biztonságunkat szolgálja, vagy inkább az állam kontrolljának, megfigyelésének egy eszköze.</p>
     <div class="vote">
       <ul class="vote-list radios active">
         <li>
